EV-23 - parallax fix on mobile

--- a/wp-content/themes/event-shares/pagebox/modules/home_banner_with_cta/scss/module.scss
+++ b/wp-content/themes/event-shares/pagebox/modules/home_banner_with_cta/scss/module.scss
@@ -41,7 +41,7 @@
       @include padding (null null 115px);
 
       @include media-breakpoint-up(md) {
-        @include padding (86px null 121px);
+        @include padding (0px null 121px);
       }
 
       p {
@@ -85,6 +85,9 @@
       @include media-breakpoint-up(lg) {
         padding-top: $shape-image-height;
       }
+      @include media-breakpoint-down(lg) {
+        height: 240px;
+      }
 
       .shape-image {
         @include size ($shape-image-width-m $shape-image-height-m);
@@ -98,7 +101,9 @@
         .image-punch {
           //width: 416px;
           //height: 363px;
-          @include size ($shape-image-width-m+1px $shape-image-height-m+1px);
+          height: 235px;
+          width: 385px;
+          //@include size ($shape-image-width-m+1px $shape-image-height-m+1px);
           @include position (absolute, 0 0 0 -92px);
           z-index: 2;
           fill: $background-color;
